ACS-11969 Changes after review